<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".Update">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:textColorHint="#757575"
        android:background="@drawable/custom_input"
        android:ems="10"
        app:drawableStartCompat="@drawable/ic_email" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/contact"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/buttons"
        android:text="@string/save"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</LinearLayout>