<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/newbg"
    tools:context=".Login">


    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:text="@string/taxi_locator"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivTaxiPicture"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/taxirank" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="10pt"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#757575"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:textColorHint="#757575"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:textColor="@color/white"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:textColor="@color/white"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvAltLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="Sign up using Google "
        android:textStyle="italic"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/ivGoogleIcon"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            app:srcCompat="@drawable/google_icon" />

    </LinearLayout>

</LinearLayout>